@@ -149,6 +149,16 @@ advertised_route_table_sync(
             continue;
         }
 
+        enum dynamic_routing_redistribute_mode drr =
+            route->out_port->dynamic_routing_redistribute;
+        if (route->source == ROUTE_SOURCE_CONNECTED &&
+              (drr & DRRM_CONNECTED) == 0) {
+            continue;
+        }
+        if (route->source == ROUTE_SOURCE_STATIC && (drr & DRRM_STATIC) == 0) {
+            continue;
+        }
+
         char *ip_prefix = normalize_v46_prefix(&route->prefix, route->plen);
         route_e = ar_add_entry(&sync_routes, route->od->sb,
                                route->out_port->sb, ip_prefix);
